--- a/DataProcessorService/DataProcessorService.csproj
+++ b/DataProcessorService/DataProcessorService.csproj
@@ -8,11 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.8" />
+    <PackageReference Include="SQLitePCLRaw.provider.e_sqlite3" Version="2.1.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LoggingLibrary\LoggingLibrary.csproj" />
+    <ProjectReference Include="..\ModuleLibrary\ModuleLibrary.csproj" />
   </ItemGroup>
 
 </Project>
