--- a/DataProcessorService/appsettings.json
+++ b/DataProcessorService/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "DataBaseConnectionString": "Data Source=C:\\Users\\Furer\\Downloads\\devicesDB.db",
   "RabbitMQSettings": {
     "HostName": "localhost",
     "Port": "5672",
